Fixed Sosmed Alignment error

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -111,6 +111,7 @@ body
 	opacity:1;
 	text-align:center;
 	display : block;
+	margin-left:-40px;
 }
 
 #sosmed  img{
